@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-26T01:53:05Z",
-  "count_outdated" : 2178,
-  "uniques_outdated" : 446,
-  "count" : 2220,
-  "uniques" : 472,
+  "timestamp" : "2022-06-26T16:23:04Z",
+  "count_outdated" : 2179,
+  "uniques_outdated" : 447,
+  "count" : 2221,
+  "uniques" : 473,
   "clones" : [
-    {
-      "timestamp": "2022-06-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
@@ -95,6 +88,13 @@
       "count_minmax": [ 2, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
+    },
+    {
+      "timestamp": "2022-06-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
