@@ -3,11 +3,6 @@
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-06-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -66,6 +61,11 @@
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-06-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
