@@ -1,3 +1,10 @@
+2022-06-26T16:23:04Z:
+* notice: last 14d: unq all: 12 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 446 2178 / 472 2220
+* notice: next accum: outdated-unq outdated-all / unq all: 447 2179 / 473 2221
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-06-12] / [2022-06-26]
+
 2022-06-26T01:53:05Z:
 * notice: last 14d: unq all: 12 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 443 2174 / 471 2217
